--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   </main>
 
   <!-- CONTACTSRST -->
-  <form action="http://localhost:3000/submit-contact" method="post" class="contact-form">
+  <form action="https://final-project-wujp.onrender.com/submit-contact" method="post" class="contact-form">
     <div class="footer-content">
       <h2 class="logo">Louvre & Latte</h2>
       <p>Via 152, 00184 Coma RM, Italia</p>
