--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <p>Via 152, 00184 Coma RM, Italia</p>
 
       <!-- FORM FORM -->
-      <form action="save.php" method="post" class="contact-form">
+      <form action="https://final-project-wujp.onrender.com/submit-contact" method="post" class="contact-form">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required>
 
