--- a/index.html
+++ b/index.html
@@ -189,13 +189,12 @@
   </main>
 
   <!-- CONTACTSRST -->
-  <form action="https://final-project-wujp.onrender.com/submit-contact" method="post" class="contact-form">
     <div class="footer-content">
       <h2 class="logo">Louvre & Latte</h2>
       <p>Via 152, 00184 Coma RM, Italia</p>
 
       <!-- FORM FORM -->
-      <form action="https://final-project-wujp.onrender.com/submit-contact" method="post" class="contact-form">
+      <form action="https://final-project-wujp.onrender.com/submit-contact" method="post" class="contact-form"></form>
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required>
 
