--- a/index.html
+++ b/index.html
@@ -188,13 +188,14 @@
     </section>
   </main>
 
-  <!-- CONTACTSRST -->
+      <!-- FORM FORM -->
+       <footer id="contact">
     <div class="footer-content">
       <h2 class="logo">Louvre & Latte</h2>
       <p>Via 152, 00184 Coma RM, Italia</p>
 
-      <!-- FORM FORM -->
-      <form action="https://final-project-wujp.onrender.com/submit-contact" method="post" class="contact-form"></form>
+      <!-- Contact Form - This now uses native HTML submission and will trigger the redirect -->
+      <form action="/submit-contact" method="post" class="contact-form">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required>
 
@@ -204,8 +205,9 @@
         <label for="message">Message</label>
         <textarea id="message" name="message" required></textarea>
 
-        <button type="submit">Submit</button>
+        <button type="submit">Send Message</button>
       </form>
+
 
       <!-- SOICALLY INACTIVE -->
       <div class="social-links">
