--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="menu-item-content">
             <h3>Espresso</h3>
             <p>Rich and bold shot of espresso with intense aroma.</p>
-            <div class="menu-item-footer"><span class="price">$2.50</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱125.00</span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
 
@@ -97,7 +97,7 @@
           <div class="menu-item-content">
             <h3>Cappuccino</h3>
             <p>Espresso with steamed milk and velvety foam.</p>
-            <div class="menu-item-footer"><span class="price">$3.80</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱170.00</span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
 
@@ -106,7 +106,7 @@
           <div class="menu-item-content">
             <h3>Latte</h3>
             <p>Espresso with steamed milk and a light layer of foam.</p>
-            <div class="menu-item-footer"><span class="price">$4.00</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱150.00</span>.00</span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
 
@@ -115,7 +115,7 @@
           <div class="menu-item-content">
             <h3>Mocha</h3>
             <p>Chocolate blended with espresso and steamed milk.</p>
-            <div class="menu-item-footer"><span class="price">$4.50</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱200.00</span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
 
@@ -124,7 +124,7 @@
           <div class="menu-item-content">
             <h3>Macchiato</h3>
             <p>Espresso topped with a dollop of milk foam.</p>
-            <div class="menu-item-footer"><span class="price">$3.50</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱220.00</span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
 
@@ -133,7 +133,7 @@
           <div class="menu-item-content">
             <h3>Americano</h3>
             <p>Espresso diluted with hot water for a smooth taste.</p>
-            <div class="menu-item-footer"><span class="price">$3.00</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱150.00</span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
 
@@ -142,7 +142,7 @@
           <div class="menu-item-content">
             <h3>Flat White</h3>
             <p>Smooth microfoam poured over a double shot of espresso.</p>
-            <div class="menu-item-footer"><span class="price">$4.20</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱200.00</span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
 
@@ -152,7 +152,7 @@
           <div class="menu-item-content">
             <h3>Croissant</h3>
             <p>Buttery, flaky, and golden French classic.</p>
-            <div class="menu-item-footer"><span class="price">$2.50</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱92.00</span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
 
@@ -161,7 +161,7 @@
           <div class="menu-item-content">
             <h3>Pain au Chocolat</h3>
             <p>Flaky pastry filled with rich chocolate.</p>
-            <div class="menu-item-footer"><span class="price">$3.00</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱85.00</span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
 
@@ -170,7 +170,7 @@
           <div class="menu-item-content">
             <h3>Éclair</h3>
             <p>Choux pastry filled with cream and topped with chocolate glaze.</p>
-            <div class="menu-item-footer"><span class="price">$3.50</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱93.00</span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
       </div>
