--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="menu-item-content">
             <h3>Latte</h3>
             <p>Espresso with steamed milk and a light layer of foam.</p>
-            <div class="menu-item-footer"><span class="price">₱150.00</span>.00</span><button class="add-to-cart-btn">+</button></div>
+            <div class="menu-item-footer"><span class="price">₱150.00</span></span><button class="add-to-cart-btn">+</button></div>
           </div>
         </div>
 
