--- a/admin.html
+++ b/admin.html
@@ -355,7 +355,7 @@
 
   <script>
   let allOrders = [];
-  const API_URL = 'https://your-render-url.onrender.com'; // REPLACE THIS!
+  const API_URL = 'https://final-project-wujp.onrender.com'; // REPLACE THIS!
 
   // Load orders from API
   async function loadOrders() {
